--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,11 @@
 body {
   margin: 0;
 }
+
+.app {
+  display: flex;
+  margin: 8px;
+  padding: 16px;
+  border: 1px solid #ccc;
+  background-color: #eee;
+}
